syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "exc8/pb";

package models;

// Messages

// todo implement messages
//
// message MyMessage {
//  ....
// }

message Drink{
  int32 id = 1;
  string name = 2;
  int32 price = 3;
  string description = 4;
}

message DrinkList {
  repeated Drink drinks = 1;
}

message OrderItem{
  int32 drink_id = 1;
  int32 quantity = 2;
}

message OrderSummaryItem{
  Drink drink = 1;
  int32 total_quantity = 2;
}

message OrderSummary{
  repeated OrderSummaryItem items = 1;
}

// Generate go files with:
// Execute `generate_pb.sh`

// Define the service
service OrderService {
  // todo define rpc functions
  rpc GetDrinks(google.protobuf.Empty) returns (DrinkList);
  rpc OrderDrink(OrderItem) returns (google.protobuf.BoolValue);
  rpc GetOrders(google.protobuf.Empty) returns (OrderSummary);
}
